# plantuml-qt

./: .gitignore  CMakeLists.txt  README.md  class_diagram.puml  verification_workflow.md
docs/: core_principles.md
docs/plans/: 2026-06-16-implement-class-diagram.md  2026-06-16-implement-graphics-scene-version.md  2026-06-16-implement-multi-file-manager.md  2026-06-16-implement-plantuml-core.md  2026-06-16-initialize-project.md  2026-06-16-refactor-to-local-puml-renderer.md  2026-06-17-implement-connection-directions.md
net/sourceforge/plantuml/classdiagram/command/: CommandCreateClass.java  CommandLinkClass.java
src/: main.cpp  mainwindow.cpp  mainwindow.h  plantuml_encoder.cpp  plantuml_encoder.h  plantuml_view.cpp  plantuml_view.h
src/app/: CliProcessor.cpp  CliProcessor.h  RenderController.cpp  RenderController.h
src/ast/: DiagramAst.h
src/graphics/: DiagramScene.cpp  DiagramScene.h  DiagramSceneRenderer.cpp  DiagramSceneRenderer.h  DiagramView.cpp  DiagramView.h
src/graphics/items/: ClassBoxItem.cpp  ClassBoxItem.h  MessageArrowItem.cpp  MessageArrowItem.h  NoteLineItem.cpp  NoteLineItem.h  PackageGroupItem.cpp  PackageGroupItem.h  ParticipantItem.cpp  ParticipantItem.h  RelationItem.cpp  RelationItem.h
src/graphviz/: DotBuilder.cpp  DotBuilder.h  DotJsonParser.cpp  DotJsonParser.h  DotProcessRunner.cpp  DotProcessRunner.h  GraphLayoutResult.h  GraphvizLayoutEngine.cpp  GraphvizLayoutEngine.h
src/layout/: ClassLayoutEngine.cpp  ClassLayoutEngine.h  LayoutEngine.h  SequenceLayoutEngine.cpp  SequenceLayoutEngine.h
src/layout_graph/: LayoutGraph.h
src/parser/: ParseError.h  PumlHighlighter.cpp  PumlHighlighter.h  PumlLexer.cpp  PumlLexer.h  PumlParser.cpp  PumlParser.h  SourceLocation.h  Token.h
src/render_model/: RenderDocument.h  RenderTheme.h
tests/: test_parser.cpp
